style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,500;1,400&display=swap');

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}


:root {
    --yt-font-family: "Roboto", "Arial", sans-serif;
    --yt-searchbox-background-color: hsl(0, 0%, 100%);
    --yt-searchbox-border-color: #ccc;
    --yt-searchbox-border-shadow-color: #eee;
    --yt-text-primary: #030303;
    --yt-button: #f9f9f9;
    --yt-h2: #606060;
    --yt-spec-brand-background-primary: rgba(255, 255, 255, 0.98);
    --yt-border: rgba(0, 0, 0, 0.1);
    --yt-text-secondary: #606060;
    --yt-padding-top-bottom: padding: 12px 0;
    --yt-active-color: #f9f9f9;
    --yt-background: rgba(0, 0, 0, 0.05);
    --yt-live: rgba(204, 0, 0, 0.9);
}

#bars {
    cursor: pointer;
}

h2 {
    padding: 8px 24px;
    display: block;
    font-size: 14px;
    font-weight: 600;
    letter-spacing: 0.5px;
    text-transform: uppercase;
    color: var(--yt-h2);
}

/* here goes header start */
.yt-header {
    height: 56px;
    padding: 0 24px;
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-between;
    z-index: 9999;
    background-color: var(--yt-spec-brand-background-primary);
    position: sticky;
    top: 0;
    background-color: #fff;
}

.yt-icon.ytd-logo {
    height: 20px;
    width: 90px;
    padding: 18px 14px 18px 16px;
    color: var(--yt-spec-wordmark-text);
    flex: none;
}

.yt-header__left {
    display: flex;
    flex-direction: row;
}

.yt-icon {
    width: 16px;
    height: 16px;
}

.yt-header__center {
    flex: 0 1 728px;
    min-width: 0px;
}

.yt-center {
    display: flex;
    flex-direction: row;
    align-items: center;
    flex: 0 1 728px;
    min-width: 0px;
    height: 40px;
    background: var(--yt-searchbox-background-color);
    margin-left: auto;
    margin-right: 40px;

}

.search-box {
    display: flex;
    flex-direction: row;
    align-items: center;
    flex: 0 1 728px;
    min-width: 0px;
    margin: auto;
    height: 40px;
    background: var(--yt-searchbox-background-color);
    border: 1px solid var(--yt-searchbox-border-color);
    box-shadow: inset 0 1px 2px var(--yt-searchbox-border-shadow-color);
}

input[type="text"] {
    border: none;
    flex: 1;
    padding: 2px 6px;
    outline: none;
    font-size: 16px;
    font-weight: 400;
    color: #606060;
    font-family: var(--yt-font-family);
}

i.fa-solid.fa-magnifying-glass {
    border-radius: 0 2px 2px 0;
    cursor: pointer;
    height: 40px;
    width: 64px;
    margin: 0;
    display: flex;
    align-items: center;
    border: 1px solid #d3d3d3;
    justify-content: center;
    background: #f8f8f8;
    border-right: none;
}

i.fa-solid.fa-microphone {
    height: 40px;
    width: 40px;
    display: flex;
    justify-content: center;
    align-items: center;
    background: var(--yt-button);
    border-radius: 50%;
    margin-left: 4px;
}

.yt-header__right {
    display: flex;
    min-width: 225px;
    align-items: center;
    justify-content: flex-end;

}

.yt-header__right i {
    font-size: 16px;
    margin: 0 20px;
}

.yt-header__right img {
    border-radius: 50%;
}

/* here goes header end */



/* here goes yt-content start */
.yt-grid {
    display: grid;
    grid-template-columns: 240px 1fr;
    background: #f0f0f0;
}

.yt-aside {
    color: var(--yt-text-primary);
    overflow: auto;
    background: #fff
}

.yt-aside__fixed {
    overflow: auto;
    width: min(100%, 240px);
    position: fixed;
    top: 70px;
    height: 100vh;


}

.yt-aside ::-webkit-scrollbar {
    width: 1px;



}

.yt-aside li {
    list-style: none;
    display: flex;
    align-items: center;
    transition: all 0.2s;
    height: 40px;
    padding: 0 24px;
    margin-right: 20px;
}

.yt-aside li:hover, .active {
    background-color: var(--yt-searchbox-border-color);
}

.yt-aside li a:hover {

    display: block;
    font-weight: 500;
}

.yt-aside li i {
    margin-right: 24px;
}

.yt-aside li a {
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
    font-family: "Arial", sans-serif;
    font-size: 14px;
    line-height: 2rem;
    font-weight: 500;
    flex: 1;
    flex-basis: 1e-9px;
    display: block;
    text-decoration: none;
    color: var(--yt-text-primary);
    text-transform: capitalize;
}

.yt-footer {
    border-top: 1px solid var(--yt-border);
    padding: 16px 24px 0;
}

.yt-guide-line-pramary, .yt-guide-line-secondary {
    padding: var(--yt-padding-top-bottom);

}

.yt-footer a {
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
    font-family: "Roboto", "Arial", sans-serif;
    font-size: 13px;
    font-weight: 300;
    text-decoration: none;
    color: var(--yt-text-secondary);
    text-transform: capitalize;
    display: inline-block;
}

.yt-copyright {
    padding: 16px 0px;
    color: var(--yt-text-secondary);
    font-family: "Roboto", "Arial", sans-serif;
    font-size: 12px;
    font-weight: 400;
}

/* here goes yt-content end */



/* here goes yt-main-content start */
.yt-main-content {
    display: grid;
    grid-gap: 10px;
    padding: 10px;
    padding-right: 0;
}

.yt-filter-bar {
    display: flex;
    align-items: center;
    overflow: auto;
    white-space: nowrap;
    border-top: 1px solid var(--yt-border);
    border-bottom: 1px solid var(--yt-border);
    margin-top: -10px;
    background: #fff;
    margin-left: -12px;
    position: sticky;
    top: 55px;

}

.yt-filter-bar::-webkit-scrollbar {
    width: 1px;
}

.yt-filter-bar li {
    list-style: none;

}

.yt-filter-bar li a {
    height: 32px;
    min-width: 12px;
    padding: 0 10px;
    border-radius: 16px;
    box-sizing: border-box;
    outline: none;
    overflow: hidden;
    cursor: pointer;
    user-select: none;
    position: relative;
    display: flex;
    flex-direction: row;
    align-items: center;
    display: inline-flex;
    font-size: 14px;
    font-weight: 400;
    line-height: 20px;
    letter-spacing: 0.2px;
    font-family: var(--yt-font-family);
    text-transform: capitalize;
    text-decoration: none;
    color: var(--yt-text-primary);
    background: var(--yt-background);
    transition: background-color 0.5s cubic-bezier(0.05, 0, 0, 1);
    margin: 12px;
}

.yt-filter-bar li .active {
    background: var(--yt-text-primary);
    color: #ccc;
}

.yt-filter-bar li a:hover {
    background-color: var(--yt-searchbox-border-color);
}

.yt-vides-list {
    padding-bottom: 48px;
    margin-left: 8px;
    margin-right: 8px;
    display: grid;
    grid-template-columns: repeat(4, 265.895px);
    gap: 10px;
    margin-top: 24px;
    border-bottom: 4px solid var(--yt-border);
    margin-bottom: 40px;
    color: #606060;
    font-family: "Roboto", "Arial", sans-serif;
}

.yt-offer {
    min-width: 0;
    width: 100%;
    margin-top: 12px;
    margin-bottom: 6px;
    display: flex;
    flex-direction: row;
    justify-content: space-between;

}

.yt-offer h1 {
    font-size: 14px;
    line-height: 20px;
    font-weight: 400;
    padding-right: 23px;
    color: #030303;
}

.yt-adds p {
    margin-bottom: 4px;
    -webkit-line-clamp: 2;
    font-size: 12px;
    line-height: 20px;
    font-weight: 400;

}

.yt-buy-course {
    display: flex;
    align-items: center;
    margin-bottom: 12px;
}

.yt-buy-course a {
    background-color: #fbc02d;
    color: #fff;
    text-decoration: none;
    font-size: 12px;
    border-radius: 2px;
    margin-right: 4px;
    padding: 2px;

}

.yt-buy-course span {
    font-size: 14px;

}

.yt-img {
    position: relative;

}

img {
    cursor: pointer;
}

.yt-img img {
    width: 100%;
    height: 100%;
    object-fit: cover;
}

.yt-mix-playlist__link {
    height: 24px;
    width: 24px;
    position: absolute;
    z-index: 10;
    bottom: 0;
    right: 0;
    color: #fff;
    padding: 3px 4px;
}

.yt-mix-playlist__link svg {
    color: #fff;
}

.yt-mix-playlist__icons {
    height: 24px;
    width: 100%;
    position: absolute;
    background-color: rgba(89, 75, 55, 0.8);
    z-index: 10;
    bottom: 0;


}

.yt-title {
    display: flex;
}

.yt-profile-img img {
    border-radius: 50%;
    margin-top: 12px;
    margin-right: 12px;
    object-fit: cover;
}

.yt-vides-list__card {
    margin-bottom: 40px;
    margin-left: 16px;
    margin-right: 16px;
}

.yt-vides-list__item {
    display: flex;
    flex-direction: column;
    margin-bottom: 48px;

}

.yt-vides-list h4 {
    margin: 12px 0 4px 0;
}

.yt-video-details {
    font-family: "Roboto", "Arial", sans-serif;
    font-size: 14px;
    font-weight: 500;
    padding-right: 24px;

}

.yt-user-name {
    font-family: "Roboto", "Arial", sans-serif;
    font-size: 12px;
    line-height: 18px;
    font-weight: 400;
    color: var(--yt-text-secondary);
    display: flex;
    align-items: center;
}

.yt-user-name i {
    width: 14px;
    height: 14px;
    margin-left: 4px;
    border-radius: 50%;
    background: #606060;
    display: inline-flex;
    align-items: center;
    justify-content: center;
    color: #fff;
    margin-right: 8px;


}

.yt-user-views-upload {
    display: flex;
    font-family: "Roboto", "Arial", sans-serif;
    font-size: 12px;
    line-height: 18px;
    font-weight: 400;
    color: var(--yt-text-secondary);
    flex-direction: column;
    margin: 4px 4px 0 0;

}

.yt-user__live {
    display: flex;
    color: #fff;
    width: 50px;
    background-color: var(--yt-live);
    align-items: center;
    padding: 3px 4px;
    width: fit-content;
    border-radius: 2px;
    height: 16px;
}

.yt-user__live span {
    font-size: 10px;
    margin-left: 4px;
}

.yt-shorts-list {
    display: grid;
    grid-template-columns: repeat(6, 171px);
    gap: 10px;
    margin-bottom: 20px;
}

.yt-shorts-list>.yt-shorts-list {
    width: 162px;
}

.yt-shorts {
    justify-content: space-between;
    display: flex;
    flex-direction: row;
}

.yt-shorts h2 {
    color: var(--yt-text-primary);
    font-family: "Roboto", "Arial", sans-serif;
    font-size: 20px;
    font-weight: 300;

}

.yt-shorts-list img {
    height: 350px;
}

/* here goes yt-main-content end */
/* here goes meadia query for Mobile start */
@media (max-device-width : 480px) {
    .yt-grid, .yt-vides-list, .yt-shorts-list {
        grid-template-columns: 1fr;
    }

    .yt-aside__fixed {
        position: unset;
        width: min(100%, 100%);
        margin-bottom: 20px;
        height: fit-content;
    }

    .yt-center {
        display: none;
    }

    .yt-aside {
        display: none;
    }

}

/* here goes meadia query for Mobile end */


/* here goes meadia query for tablet start */
@media only screen and (min-device-width : 481px) and (max-device-width : 1024px) {

    .yt-grid {
        grid-template-columns: 1fr;

    }

    .yt-aside__fixed {
        position: unset;
        width: min(100%, 100%);
        margin-bottom: 20px;
        height: fit-content;
    }

    .yt-shorts-list, .yt-vides-list {
        grid-template-columns: 1fr 1fr;
    }

    .yt-center {
        display: none;
    }

    .yt-aside {
        display: none;
    }
}

/* 
@media only screen and (min-device-width : 1025px) and (max-device-width : 1400px) {
    .yt-grid {
        grid-template-columns: 240px 1fr;
    }

    .yt-vides-list, .yt-shorts-list {
        grid-template-columns: repeat(4, 1fr);
    }

    .yt-center {
        margin-right: 0;
    }

} */

/* here goes meadia query for tablet start */

